# cspot

./: 404.html  Dockerfile  Dockerfile copy  README.md  dockerExample (MGB031040's conflicted copy 2023-10-25).sh  dockerExample.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: build-unix-mac-win.yml  docs.yml  nbtomd.yml
Functions/addPredictions/: index.html
Functions/cloneFolder/: index.html
Functions/csExport/: index.html
Functions/csObject/: index.html
Functions/csPhenotype/: index.html
Functions/csPipeline/: index.html
Functions/csPredict/: index.html
Functions/csTrain/: index.html
Functions/cspot/: index.html
Functions/generateCSScore/: index.html
Functions/generateThumbnails/: index.html
Functions/generateTrainTestSplit/: index.html
Functions/mergecsObject/: index.html
Functions/scatterPlot/: index.html
Getting Started/: index.html
Tutorials/md/BuildCSPOTModel/: index.html
Tutorials/md/DownloadTutorialData/: index.html
Tutorials/md/HelperFunctions/: index.html
Tutorials/md/InstallationandSetUp/: index.html
Tutorials/md/PhenotypeCells/: index.html
Tutorials/md/Quick Start Guide/: index.html
Tutorials/md/ReviewQuickStartGuide/: index.html
Tutorials/md/RunCSPOTAlgorithm/: index.html
Tutorials/md/RunCSPOTwithDocker/: index.html
Tutorials/notebooks/: DownloadTutorialData.ipynb  HelperFunctions.ipynb  PhenotypeCells.ipynb  RunCSPOTAlgorithm.ipynb
archive/: csPredict-01-04-24.py
cspot/: UNet.py  __init__.py  addPredictions.py  cloneFolder.py  csExport.py  csObject.py  csPhenotype.py  csPipeline.py  csPredict.py  csTrain.py  cspot.py  generateCSScore.py  generateThumbnails.py  generateTrainTestSplit.py  mergecsObject.py  scatterPlot.py
cspot/archives/: UNet-02032023.py
cspot/toolbox/: PartitionOfImage.py  __init__.py  ftools.py
docs/: Getting Started.md  Workflow.md  index.md
docs/Functions/: addPredictions.md  cloneFolder.md  csExport.md  csObject.md  csPhenotype.md  csPipeline.md  csPredict.md  csTrain.md  cspot.md  gator.md  gatorExport.md  gatorObject.md  gatorPhenotype.md  gatorPipeline.md  gatorPredict.md  gatorTrain.md  generateCSScore.md  generateDLScore.md  generateGatorScore.md  generateThumbnails.md  generateTrainTestSplit.md  mergeGatorObject.md  mergecsObject.md  scatterPlot.md
docs/Tutorials/: ApplyModel.ipynb  ApplyModel.md  BuildGatorModels.md  BuildModel.ipynb  BuildModel.md  CellPhenotyping.ipynb  CellPhenotyping.md  Docker.md  DownloadTutorialData.md  HelperFunctions.md  RunCSPOTwithDocker.md  RunGator.ipynb  RunGator.md  RunGatorAlgorithm.md  SetUp.md  WSI.ipynb  exampleData.md  training_generator.ipynb
docs/Tutorials/.ipynb_checkpoints/: ApplyModel-checkpoint.ipynb  BuildModel-checkpoint.ipynb
docs/Tutorials/gatorExampleData/: markers.csv  phenotype_workflow.csv
docs/Tutorials/md/: BuildCSPOTModel.md  DownloadTutorialData.md  HelperFunctions.md  InstallationandSetUp.md  PhenotypeCells.md  Quick Start Guide.md  ReviewQuickStartGuide.md  (+2 more)
docs/stylesheets/: extra.css
gatorpy/: DLPredict.py  UNet.py  __init__.py  addPredictions.py  cloneFolder.py  gator.py  gatorExport.py  gatorObject.py  gatorPhenotype.py  gatorPipeline.py  gatorPredict.py  gatorToCSV.py  gatorTrain.py  generateDLScore.py  generateGatorScore.py  generateThumbnails.py  generateTrainTestSplit.py  mergeGatorObject.py  scatterPlot.py
gatorpy/archives/: gator-01272023.py
gatorpy/toolbox/: ftools.py  imtools.py
search/: search_index.json
tests/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
(+41 files in other folders)
