[tool.poetry]
name = "gatorpy"
version = "0.1.11"
description = "GATOR: A scalable framework for automated processing of highly multiplexed tissue images"
authors = ["Ajit Johnson Nirmal <ajitjohnson.n@gmail.com>"]
readme = "README.md"

keywords = ["image analysis","multiplex imaging","single cell analysis"]

homepage = "https://pypi.org/project/gatorpy/"
documentation = "https://nirmallab.github.io/gatorpy/"
repository = "https://github.com/nirmallab/gatorpy"

classifiers = [
              "Development Status :: 4 - Beta",
              "Natural Language :: English",
              "Operating System :: OS Independent",
              "Programming Language :: Python"]
              
exclude = ["docs"]


[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.23.2"
pandas = "^1.4.4"
tifffile = "^2022.8.12"
pathlib = "^1.0.1"
dask = "^2022.8.1"
zarr = "^2.12.0"
opencv-python = "^4.6.0.66"
anndata = "^0.8.0"
scikit-learn = "^1.2.1"
argparse = "^1.4.0"
scikit-image = "^0.19.3"
tensorflow = "<2.11"
Brotli = "^1.0.9"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




